src/components/Footer/style.css
/* Footer */

.footer {
  color: #fff;
  font-weight: 600;
  font-size: 1.4rem;
  margin: 2rem auto;
}

.footer-title {
  margin: 1rem;
}

/* Skills Section */

.skills-section {
  display: flex;
  padding: 0.8rem 1.2rem;
  justify-content: center;
}

.skills-section svg{
  width: 6%;
}

@media only screen and (max-width: 850px) {
  .skills-section svg {
    width: 10%;
  }
}

